update: fix layout issue on landing page

--- a/src/routes/landing/landing.styles.scss
+++ b/src/routes/landing/landing.styles.scss
@@ -66,9 +66,9 @@
 
     position: absolute;
     width: 306px;
-    height: 68px;
+    height: 54px;
     left: calc(50% - 306px/2 + 1px);
-    bottom: 204px;
+    margin-top: 30px;
 
     /* Colors/Blue/Blue Button */
     font-size: 1.0rem;
